Apply latest app updates